# KcAuto

./: .gitignore  AGENTS.md  pyproject.toml
config/: default.yaml  pages.yaml
config/tasks/: sortie.yaml
docs/: 使用说明.md
src/poi_auto/: __init__.py
src/poi_auto/app/: main.py
src/poi_auto/core/: __init__.py  config.py  context.py  runner.py
src/poi_auto/device/: __init__.py  capture.py  controller.py  input.py  window.py
src/poi_auto/gui/: __init__.py  main_window.py
src/poi_auto/tasks/: __init__.py  base.py
src/poi_auto/tasks/sortie/: __init__.py  task.py
src/poi_auto/vision/: __init__.py  damage.py  pages.py  recognizer.py
tests/: test_damage_detector.py  test_page_matcher.py  test_sortie_task.py
